--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 />
                 <div>
                   <h3>C++</h3>
-                  <p>Basic</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
