--- a/index.html
+++ b/index.html
@@ -106,10 +106,7 @@
           </div>
           <div class="text-container">
             <p>
-                I have experience with several programming languages,
-                 including Java, Python, and SQL. I’m particularly interested
-                  in artificial intelligence and machine learning, and I’m currently
-                   working on a project that involves developing an AI-powered chatbot.
+                I’m Ayush Chauhan, a passionate and dedicated final-year B.Tech CSE student with a strong foundation in programming and web development. I’ve built several real-world projects including an Online Voting System, an Interactive E-Library, and a Car Price Prediction model. I also hold certifications in Web Development and SQL. With a curious mindset and an optimistic approach, I continuously seek opportunities to apply my skills and grow in the tech industry.
             </p>
           </div>
         </div>
